--- a/index.html
+++ b/index.html
@@ -1,20 +1,74 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <h1>This is Drake Stephens' page</h1>
-        <p>By the End of the semester, this page will be my FINAL PROJECT with links to ALL OF MY PROJECTS</p>
-        <script src="" async defer></script>
-    </body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/home.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <nav class="navbar navbar-expand-lg navbar-light bg-info">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Drake Stephens</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Library</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </nav>
+    </header>
+    <main class="bg-secondary">
+        <div class="p-5 bg-dark" style="height: 33em;">
+            <!-- Slideshow container -->
+            <div class="slideshow-container">
+
+                <div class="mySlides fade">
+                  <div class="numbertext">1 / 3</div>
+                  <img src="img/img1.jpg" style="width: 20em;">
+                </div>
+                
+                <div class="mySlides fade">
+                  <div class="numbertext">2 / 3</div>
+                  <img src="img/img2.jpg" style="width: 20em;">
+                </div>
+                
+                <div class="mySlides fade">
+                    <div class="numbertext">3 / 3</div>
+                    <img src="img/img4.jpg" style="width: 20em; ">
+                </div>
+
+                </div>
+                <br>
+            <br>
+
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos fugiat voluptates rerum cupiditate facere, delectus debitis reprehenderit quasi ipsam, tempore natus accusantium ex maxime autem magnam alias, optio id nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, at harum veniam fugiat corporis dolorum ipsam, obcaecati odit enim blanditiis sit? Consequuntur vitae perferendis magni dolores animi odio maxime assumenda? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eaque impedit, ea ab enim est. Dignissimos quis repellat doloribus labore, blanditiis voluptas iusto tenetur, maxime nam consequuntur cumque alias error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, neque at sint eos molestias nesciunt qui placeat. Commodi debitis quis similique, recusandae, totam itaque vitae cum dolores voluptate obcaecati accusantium.</p>
+        </div>
+    </main>
+    <footer class="bg-info ">
+        <h5 class="navbar-brand ml-2 mb-0">Thanks for Visiting!</h5>
+    </footer>
+    <script src="home.js"></script>
+</body>
+
 </html>
