first draft pre errors

--- a/index.html
+++ b/index.html
@@ -67,16 +67,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos fugiat voluptates rerum cupiditate
-                    facere, delectus debitis reprehenderit quasi ipsam, tempore natus accusantium ex maxime autem magnam
-                    alias, optio id nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, at harum
-                    veniam fugiat corporis dolorum ipsam, obcaecati odit enim blanditiis sit? Consequuntur vitae
-                    perferendis magni dolores animi odio maxime assumenda? Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Vel eaque impedit, ea ab enim est. Dignissimos quis repellat doloribus labore,
-                    blanditiis voluptas iusto tenetur, maxime nam consequuntur cumque alias error. Lorem ipsum dolor sit
-                    amet consectetur adipisicing elit. Delectus, neque at sint eos molestias nesciunt qui placeat.
-                    Commodi debitis quis similique, recusandae, totam itaque vitae cum dolores voluptate obcaecati
-                    accusantium.</p>
+                <p>This is an awesome website to show of my awesome coding skills. APIs, JS, CSS, and HTML are all present on this page have fun exploring the akward code from my akward brain. </p>
             </div>
         </div>
     </main>
