--- a/library.html
+++ b/library.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/library.css">
 </head>
 
-<body class="bg-secondary" onload="playSong();">
+<body class="bg-secondary">
     <header>
         <nav>
             <nav class="navbar navbar-expand-lg navbar-light bg-info">
@@ -39,7 +39,7 @@
         <div>
             <div class="containter m-5 project-container" id="youtube-video-page">
                 <div class="row">
-                    <h3>Project Name</h3>
+                    <h3>YouTube Video Page</h3>
                 </div>
                 <div class="row">
                     <div class="col img">
@@ -48,35 +48,32 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic qui optio unde expedita
-                            dolorum, eligendi mollitia soluta culpa, est fuga sequi? Non, deleniti perspiciatis tempora
-                            ut nostrum doloribus neque tempore?</p>
+                        <p>In this assingment I was asked to make a page displaying music videos of an artist or topic
+                            that I like and to use the table element to make an information table.</p>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                     <div class="col-4 ml-5">
-                        <button class="btn btn-info">
-                            <img src="img/github-icon.png" alt="github-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://github.com/DrakeStephens1999/Youtube-Video-Page">
+                            <img src="img/github-icon.png" alt="github-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
                     <div class="col-4 mr-5">
-                        <button class="btn btn-info">
-                            <img src="img/www-icon.jpg" alt="www-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://drakestephens1999.github.io/Youtube-Video-Page/">
+                            <img src="img/www-icon.jpg" alt="www-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                 </div>
             </div>
             <div class="containter m-5 project-container" id="mappin-it">
                 <div class="row">
-                    <h3>Project Name</h3>
+                    <h3>Mappin It</h3>
                 </div>
                 <div class="row">
                     <div class="col img">
@@ -85,35 +82,32 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic qui optio unde expedita
-                            dolorum, eligendi mollitia soluta culpa, est fuga sequi? Non, deleniti perspiciatis tempora
-                            ut nostrum doloribus neque tempore?</p>
+                        <p>In this assingment I learned and executed image mapping so that users could interact with my
+                            images.</p>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                     <div class="col-4 ml-5">
-                        <button class="btn btn-info">
-                            <img src="img/github-icon.png" alt="github-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://github.com/DrakeStephens1999/image-map">
+                            <img src="img/github-icon.png" alt="github-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
                     <div class="col-4 mr-5">
-                        <button class="btn btn-info">
-                            <img src="img/www-icon.jpg" alt="www-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://drakestephens1999.github.io/image-map/">
+                            <img src="img/www-icon.jpg" alt="www-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                 </div>
             </div>
             <div class="containter m-5 project-container" id="super-hero-style">
                 <div class="row">
-                    <h3>Project Name</h3>
+                    <h3>Superhero Style</h3>
                 </div>
                 <div class="row">
                     <div class="col img">
@@ -122,35 +116,32 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic qui optio unde expedita
-                            dolorum, eligendi mollitia soluta culpa, est fuga sequi? Non, deleniti perspiciatis tempora
-                            ut nostrum doloribus neque tempore?</p>
+                        <p>The main core of this assigent was css! Using pre written info about superheroes personailze
+                            each one with fonts and colors.</p>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                     <div class="col-4 ml-5">
-                        <button class="btn btn-info">
-                            <img src="img/github-icon.png" alt="github-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://github.com/DrakeStephens1999/Superhero-Style">
+                            <img src="img/github-icon.png" alt="github-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
                     <div class="col-4 mr-5">
-                        <button class="btn btn-info">
-                            <img src="img/www-icon.jpg" alt="www-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://drakestephens1999.github.io/Superhero-Style/">
+                            <img src="img/www-icon.jpg" alt="www-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                 </div>
             </div>
             <div class="containter m-5 project-container" id="little-boxes">
                 <div class="row">
-                    <h3>Project Name</h3>
+                    <h3>Little Boxes</h3>
                 </div>
                 <div class="row">
                     <div class="col img">
@@ -159,35 +150,31 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic qui optio unde expedita
-                            dolorum, eligendi mollitia soluta culpa, est fuga sequi? Non, deleniti perspiciatis tempora
-                            ut nostrum doloribus neque tempore?</p>
+                        <p>Using css I had to make a piece of art. Being a fan of Nintendo I decided to make a chain chomp.</p>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                     <div class="col-4 ml-5">
-                        <button class="btn btn-info">
-                            <img src="img/github-icon.png" alt="github-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://github.com/DrakeStephens1999/Little-Boxes">
+                            <img src="img/github-icon.png" alt="github-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
                     <div class="col-4 mr-5">
-                        <button class="btn btn-info">
-                            <img src="img/www-icon.jpg" alt="www-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://drakestephens1999.github.io/Little-Boxes/">
+                            <img src="img/www-icon.jpg" alt="www-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                 </div>
             </div>
             <div class="containter m-5 project-container" id="mad-libs">
                 <div class="row">
-                    <h3>Project Name</h3>
+                    <h3>Mad Libs</h3>
                 </div>
                 <div class="row">
                     <div class="col img">
@@ -196,35 +183,31 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic qui optio unde expedita
-                            dolorum, eligendi mollitia soluta culpa, est fuga sequi? Non, deleniti perspiciatis tempora
-                            ut nostrum doloribus neque tempore?</p>
+                        <p>For this assingment I had to make a mad lib program. The user is given a handful of words to enter and they fill in a (poorly written) story.</p>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                     <div class="col-4 ml-5">
-                        <button class="btn btn-info">
-                            <img src="img/github-icon.png" alt="github-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://github.com/DrakeStephens1999/Mad-Lib">
+                            <img src="img/github-icon.png" alt="github-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
                     <div class="col-4 mr-5">
-                        <button class="btn btn-info">
-                            <img src="img/www-icon.jpg" alt="www-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://drakestephens1999.github.io/Mad-Lib/">
+                            <img src="img/www-icon.jpg" alt="www-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                 </div>
             </div>
             <div class="containter m-5 project-container" id="the-lottery-game">
                 <div class="row">
-                    <h3>Project Name</h3>
+                    <h3>The Lottery</h3>
                 </div>
                 <div class="row">
                     <div class="col img">
@@ -233,35 +216,31 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic qui optio unde expedita
-                            dolorum, eligendi mollitia soluta culpa, est fuga sequi? Non, deleniti perspiciatis tempora
-                            ut nostrum doloribus neque tempore?</p>
+                        <p>This assingment shows my ability to use js to make a random number generator.</p>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                     <div class="col-4 ml-5">
-                        <button class="btn btn-info">
-                            <img src="img/github-icon.png" alt="github-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://github.com/DrakeStephens1999/Lottery">
+                            <img src="img/github-icon.png" alt="github-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
                     <div class="col-4 mr-5">
-                        <button class="btn btn-info">
-                            <img src="img/www-icon.jpg" alt="www-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://drakestephens1999.github.io/Lottery/">
+                            <img src="img/www-icon.jpg" alt="www-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                 </div>
             </div>
             <div class="containter m-5 project-container" id="tic-tac-toe">
                 <div class="row">
-                    <h3>Project Name</h3>
+                    <h3>Tic Tac Toe</h3>
                 </div>
                 <div class="row">
                     <div class="col img">
@@ -270,35 +249,31 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic qui optio unde expedita
-                            dolorum, eligendi mollitia soluta culpa, est fuga sequi? Non, deleniti perspiciatis tempora
-                            ut nostrum doloribus neque tempore?</p>
+                        <p>I had lot of fun making this one. I had to design a themed tic tac toe game. My js skills were really tested with this one.</p>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                     <div class="col-4 ml-5">
-                        <button class="btn btn-info">
-                            <img src="img/github-icon.png" alt="github-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://github.com/DrakeStephens1999/TicTacToe">
+                            <img src="img/github-icon.png" alt="github-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
                     <div class="col-4 mr-5">
-                        <button class="btn btn-info">
-                            <img src="img/www-icon.jpg" alt="www-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://drakestephens1999.github.io/TicTacToe/">
+                            <img src="img/www-icon.jpg" alt="www-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                 </div>
             </div>
             <div class="containter m-5 project-container" id="pizza-parlor">
                 <div class="row">
-                    <h3>Project Name</h3>
+                    <h3>Pizza Parlor</h3>
                 </div>
                 <div class="row">
                     <div class="col img">
@@ -307,28 +282,24 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic qui optio unde expedita
-                            dolorum, eligendi mollitia soluta culpa, est fuga sequi? Non, deleniti perspiciatis tempora
-                            ut nostrum doloribus neque tempore?</p>
+                        <p>Had to make a website for a pizza resturaunt. We had to an order and contact page and send it to a seperate php page.</p>
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                     <div class="col-4 ml-5">
-                        <button class="btn btn-info">
-                            <img src="img/github-icon.png" alt="github-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://github.com/DrakeStephens1999/Pizza-1">
+                            <img src="img/github-icon.png" alt="github-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
                     <div class="col-4 mr-5">
-                        <button class="btn btn-info">
-                            <img src="img/www-icon.jpg" alt="www-icon"
-                                style="height: 2em; width: 2em;">
-                        </button>
+                        <a class="btn btn-info button" href="https://drakestephens1999.github.io/Pizza-1/">
+                            <img src="img/www-icon.jpg" alt="www-icon" style="height: 2em; width: 2em;">
+                        </a>
                     </div>
-                    <div class="col-2"> 
+                    <div class="col-2">
 
                     </div>
                 </div>
@@ -339,7 +310,9 @@
         <h5 class="navbar-brand ml-2 mb-0">Thanks for Visiting!</h5>
     </footer>
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
