--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
                 <div class="slideshow-container">
 
                     <div class="mySlides fade">
-                        <img src="img/img1.jpg" style="width: 15em;">
+                        <img src="img/img1.jpg" style="width: 15em;" alt="Photo-Of-Drake">
                     </div>
 
                     <div class="mySlides fade">
-                        <img src="img/img2.jpg" style="width: 15em;">
+                        <img src="img/img2.jpg" style="width: 15em;" alt="Photo-Of-Drake">
                     </div>
 
                     <div class="mySlides fade">
-                        <img src="img/img3.jpg" style="width: 15em; ">
+                        <img src="img/img3.jpg" style="width: 15em;" alt="Photo-Of-Drake">
                     </div>
                     <div class="mySlides fade">
-                        <img src="img/img4.jpg" style="width: 15em; ">
+                        <img src="img/img4.jpg" style="width: 15em;" alt="Photo-Of-Drake">
                     </div>
                 </div>
             </div>
