added more to the sites description

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                 <br>
                 <button class="btn btn-info" onclick="getNewQuote();">Press here for a famous Quote</button>
                 <p>"<span id="quote"></span>"<span id="author"></span></p>
-                <button class="btn btn-info" onclick="playSong();">Or here for my song(Explicit)</button>
+                <button class="btn btn-info" onclick="playSong();">Or here for my rap song(SONG IS EXPLICIT!!!!!)</button>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <p>This is an awesome website to show of my awesome coding skills. APIs, JS, CSS, and HTML are all present on this page have fun exploring the akward code from my akward brain. </p>
+                <p>This is an awesome website to show of my awesome coding skills. An API, JS, CSS, and HTML are all present on this page have fun exploring the awkward code from my awkward brain. CSIS 1430 Ended up being a nice refresher on some skills that I hadn't fully mastered. The Tic-Tac-Toe assignment really made me think outside the box and once I saw the way of reseting the board I had a real enlightment moment. With the knowledge I already had even more concrete in my brain im exicited for my future in code.</p>
             </div>
         </div>
     </main>
